[package]
name = "warp-mix-service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.120", default-features = false, features = ["std"] }
tokio = { version = "1.38.0", default-features = false, features = ["macros", "rt-multi-thread"] }
warp = "0.3.7"

[build]
rustc-args = ["-Vv"]
